# cli-tools

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  build.sh  cli-tools.toml  common.sh  completions.sh  git-tag-version.sh  install.sh
.github/workflows/: rust-build.yml  rust-lint.yml  rust.yml
benches/: date.rs  dir_move.rs  dupe_find.rs  format.rs  lib.rs  resolution.rs
src/: config.rs  date.rs  lib.rs  resolution.rs  scan_cache.rs  video_info.rs
src/dir_move/: mod.rs  mover.rs  types.rs  utils.rs
src/dot_rename/: config.rs  format.rs  mod.rs  rename.rs
src/dupe_find/: mod.rs
tests/: config_integration_tests.rs
tests/fixtures/: dummy.torrent  sample_config.toml  visa_sample.xml  visa_year_transition.xml
