[package]
name = "cli-tools"
version = "6.2.0"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "A collection of CLI utilities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/cli-tools"
keywords = ["cli", "rename"]
categories = ["command-line-utilities"]
rust-version = "1.91"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
clap_complete = "4.5.61"
colored = "3.0.0"
ctrlc = "3.4.7"
difference = "2.0.0"
dirs = "6.0.0"
dunce = "1.0.5"
encoding_rs = "0.8.35"
futures = "0.3.31"
git2 = "0.20.2"
indicatif = { version = "0.18.3", features = ["tokio", "futures", "rayon"] }
itertools = "0.14.0"
ratatui = "0.29.0"
crossterm = "0.28.1"
rayon = "1.10.0"
num_cpus = "1.17.0"
regex = "1.12.2"
rust_xlsxwriter = { version = "0.92.2", features = ["chrono", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
tempfile = "3.23.0"
titlecase = "3.6.0"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.8"
trash = "5.2.5"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[[bin]]
name = "div"
path = "src/bin/divider.rs"

[[bin]]
name = "dirmove"
path = "src/bin/dir_move/main.rs"

[[bin]]
name = "dots"
path = "src/bin/dots.rs"

[[bin]]
name = "dupefind"
path = "src/bin/dupe_find/main.rs"

[[bin]]
name = "flipdate"
path = "src/bin/flip_date.rs"

[[bin]]
name = "vres"
path = "src/bin/resolution.rs"

[[bin]]
name = "vconvert"
path = "src/bin/video_convert/main.rs"

[[bin]]
name = "visaparse"
path = "src/bin/visa_parse.rs"

[[bin]]
name = "vtag"
path = "src/bin/version_tag.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
