[package]
name = "cli-tools"
version = "8.11.0"
edition = "2024"
authors = ["Esgrove <esgrove@outlook.com>"]
description = "A collection of CLI utilities."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Esgrove/cli-tools"
keywords = ["cli", "rename"]
categories = ["command-line-utilities"]
rust-version = "1.92"

[dependencies]
anyhow = "1.0.101"
chrono = "0.4.43"
clap = { version = "4.5.57", features = ["derive"] }
clap_complete = "4.5.65"
colored = "3.1.1"
crossterm = "0.29.0"
ctrlc = "3.5.1"
difference = "2.0.0"
dirs = "6.0.0"
dunce = "1.0.5"
encoding_rs = "0.8.35"
futures = "0.3.31"
git2 = "0.20.4"
indicatif = { version = "0.18.3", features = ["tokio", "futures", "rayon"] }
itertools = "0.14.0"
num_cpus = "1.17.0"
ratatui = "0.30.0"
rayon = "1.11.0"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["cookies", "form", "multipart"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust_xlsxwriter = { version = "0.93.0", features = ["chrono", "serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_bencode = "0.2.4"
serde_bytes = "0.11.19"
serde_json = "1.0"
sha1 = "0.10.6"
tempfile = "3.24.0"
titlecase = "3.6.0"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.12"
trash = "5.2.5"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12.0"
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[[bin]]
name = "div"
path = "src/bin/divider.rs"

[[bin]]
name = "dirmove"
path = "src/bin/dir_move/main.rs"

[[bin]]
name = "dots"
path = "src/bin/dots/main.rs"

[[bin]]
name = "dupefind"
path = "src/bin/dupe_find/main.rs"

[[bin]]
name = "flipdate"
path = "src/bin/flip_date.rs"

[[bin]]
name = "thumbs"
path = "src/bin/thumbnail/main.rs"

[[bin]]
name = "vres"
path = "src/bin/video_resolution/main.rs"

[[bin]]
name = "vconvert"
path = "src/bin/video_convert/main.rs"

[[bin]]
name = "visaparse"
path = "src/bin/visa_parse/main.rs"

[[bin]]
name = "vtag"
path = "src/bin/version_tag.rs"

[[bin]]
name = "qtorrent"
path = "src/bin/qtorrent/main.rs"

[profile.dev]
incremental = true

[profile.release]
lto = true
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html
enum_glob_use = "deny"
unwrap_used = "deny"
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
fn_params_excessive_bools = "allow"
struct_excessive_bools = "allow"
